--- a/views/student/course/5_Selection_Statements-course.ejs
+++ b/views/student/course/5_Selection_Statements-course.ejs
@@ -1213,58 +1213,148 @@
                         <h2>Writing</h2>
                         <!--* 1 *-->
                         <div class="gamecontent-W">
-                            <iframe src="https://drive.google.com/file/d/1paJ6fajACtcU8nDFjnIzL7dN-_0Af7Qr/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://drive.google.com/file/d/1nrn_-5WGtfk3PNoXJA4LUfZeG2HRbEtb/preview" width="440" height="500" allow="autoplay"></iframe>
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
                             <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
                             <div id="myDIV1" style="margin-top: 10px; display:none; align-items: flex-end;">
-                                <iframe src="https://drive.google.com/file/d/1EgYxJU6l4qsXU6Mwe82plz8dVr05TW7p/preview" width="640" height="480" allow="autoplay"></iframe> 
-                                <iframe src="https://drive.google.com/file/d/1MVCKi40LRmw0Lmkq8VNszbFrMcv10tJ3/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1psHJ5dnAQuLJS_o7DSb-ZscVfUlVuQqG/preview" width="640" height="480" allow="autoplay"></iframe> 
+                                <iframe src="https://drive.google.com/file/d/1f1RO6KgAOQtn5paBy8iyK-b1o0nxutIS/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1P9DTXCVrOmuB1TGFN1XZ5evB1fjJZUWZ/preview" width="400" height="480" allow="autoplay"></iframe>
+
                         </div></div>
                         <!--* 2 *-->
                         <div class="gamecontent-W">
-                            <iframe src="https://drive.google.com/file/d/1avgE9dzsgDoCFJPB7MTJYP41H-5QeUTS/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://drive.google.com/file/d/1wBpHK8c6b9PxbfitmU8fR8tkrUaKMFJ9/preview" width="440" height="500" allow="autoplay"></iframe>
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
                             <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
                             <div id="myDIV2" style="margin-top: 10px; display:none; align-items: flex-end;">
-                                <iframe src="https://drive.google.com/file/d/1WIPsZ6ZfAHyJlXFZVyogA8DoCg6XAxvy/preview" width="640" height="480" allow="autoplay"></iframe> 
-                                <iframe src="https://drive.google.com/file/d/1BKv7qoFv9g93OrI4wLiC4I_jLT46yO__/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/19-3rfFS_2hKGii8pQMb3TUSlIXZNkAux/preview" width="640" height="480" allow="autoplay"></iframe> 
+                                <iframe src="https://drive.google.com/file/d/1aslmvLM23SFYR390HIn5dPY4CkFdHwS8/preview" width="400" height="480" allow="autoplay"></iframe>
                         </div></div>
                         <!--* 3 *-->
                         <div class="gamecontent-W">
-                            <iframe src="https://drive.google.com/file/d/1LUur7C0PFlRFAIcyCHdpz622b2fgUS-h/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://drive.google.com/file/d/16v234BWe5VpMXgtdc1evsY182bjbQgYF/preview"  width="440" height="500" allow="autoplay"></iframe>
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
                             <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
                             <div id="myDIV3" style="margin-top: 10px; display:none; align-items: flex-end;">
-                                <iframe src="https://drive.google.com/file/d/13Iz04ynkS8FfphMUJNoYthbNTc4f7LWY/preview" width="640" height="480" allow="autoplay"></iframe>
-                                <iframe src="https://drive.google.com/file/d/15PxOPOLv94qbr9y2i4SEATcxSkp1iFCm/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1CLjsAx4x9-J0pxT_tcuHj6WllyZh4p8X/preview" width="640" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1QaD8ZN3UvB5hFFc7zOkIT602lL_U8BVv/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1lSJpyYWztQ1lKzdiW1LAa5hS6DPklyme/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1fDrN1lpYxGLJ2sSU3kLNkFJ5wjT_T1Ab/preview" width="400" height="480" allow="autoplay"></iframe>
                             </div></div>
                         <!--* 4 *-->
                         <div class="gamecontent-W">
-                            <iframe src="https://drive.google.com/file/d/1j-yErRhFEK-ngHTOmk9C0nt3zWAHUCbq/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://drive.google.com/file/d/16oUJKTWjyLs_HdkjyrI7WDjYKuw5w-Re/preview" width="440" height="500" allow="autoplay"></iframe>
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
                             <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
                             <div id="myDIV4" style="margin-top: 10px; display:none; align-items: flex-end;">
-                                <iframe src="https://drive.google.com/file/d/1IoxNFsz45EZBqDYVLnW3AcfhZshmQNEt/preview" width="640" height="480" allow="autoplay"></iframe>                
-                                <iframe src="https://drive.google.com/file/d/1_kk7CISWCCdN2c_RaQqzPvElnpfvz9wH/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1yraxgKqVwssd629A4rFP6Th5tLw0GzND/preview" width="640" height="480" allow="autoplay"></iframe>                
+                                <iframe src="https://drive.google.com/file/d/1QaTbDh5Rq6EDJT0OUpzVv2iKhl0u4NkK/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/17sjHVGFruvKBMelRezkujCLOQUUtcWeN/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1qwrrjKqX7V4cvdM72ykmMlDaWVUI8shD/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1pgf3cfB0eE2c_ax1cq4TlXrdHNJ_aZiB/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1Goccxo1RSlROIcTr35F-XrN8ek6Qk0JB/preview" width="400" height="480" allow="autoplay"></iframe>
+
                         </div></div>
                         <!--* 5 *-->
                         <div class="gamecontent-W">
-                            <iframe src="https://drive.google.com/file/d/1N00PU_A3v7hC6fAAAiuWU6KLU4kEaTe5/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://drive.google.com/file/d/1vcPaH96vfsg2b-ehvw68Op-_G1RP6o8O/preview" width="440" height="500" allow="autoplay"></iframe>
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
                             <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
                             <div id="myDIV5" style="margin-top: 10px; display:none; align-items: flex-end;">
-                                <iframe src="https://drive.google.com/file/d/1365nt8s8nUG-aEt8GEUS0iE-M3yUyY93/preview" width="640" height="480" allow="autoplay"></iframe>                
-                                <iframe src="https://drive.google.com/file/d/130A5M1fhuuAxDZOFcuYToVdCECKxvunh/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1rMTOcGLwcYoxn_slN3g3KSrqpaf4J1f_/preview" width="640" height="480" allow="autoplay"></iframe>                
+                                <iframe src="https://drive.google.com/file/d/1pzJJQDBGtOBNPHsaDniWMjxFDVXvkUes/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/11so7iaKF5yxFk9NgCMq9QIic6_PTkJ1S/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1XYa57kabjNBTypgt4ru_yPdqHjg9EosU/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/14rjXJZe-4oWiDiXmZ5OLXJ_Ll2BkBMML/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/12AANr9S9L2DGTa9B2P064XJQia83BZNK/preview" width="400" height="480" allow="autoplay"></iframe>
+                        </div></div>
+                        <!--* 6 *-->
+                         <div class="gamecontent-W">
+                            <iframe src="https://drive.google.com/file/d/1H8U39ih_yqPEwWNZpQiwmtNT2h6u0oaa/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                        </div>
+                        <div class="gamecontent-W">
+                            <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV1" style="margin-top: 10px; display:none; align-items: flex-end;">
+                                <iframe src="https://drive.google.com/file/d/1JxhxZ3HDSuAbSOvYcuM9PyJsVQuu3itE/preview" width="640" height="480" allow="autoplay"></iframe> 
+                                <iframe src="https://drive.google.com/file/d/1-NmJEhMiR710Za9xYXItdTX3tIHlLAjy/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1ZzhqoDhFa5Z1nL6WC_ffIc1gQ8J0gfh5/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1rnRMLgDyLHPYsiC3cGuD6CVozCHOVRYs/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1CxIiIDFfAdKHb-Ga4wsEYHdKAzrh0pUE/preview" width="400" height="480" allow="autoplay"></iframe>
+                        </div></div>
+                        <!--* 7 *-->
+                        <div class="gamecontent-W">
+                            <iframe src="https://drive.google.com/file/d/158maNAzMefpl-jobVrJTqY-yghaCqjrZ/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                        </div>
+                        <div class="gamecontent-W">
+                            <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV2" style="margin-top: 10px; display:none; align-items: flex-end;">
+                                <iframe src="https://drive.google.com/file/d/1Pf_2en8b8XDDMIcv_dvKQrtQAjZ2qvly/preview" width="640" height="480" allow="autoplay"></iframe> 
+                                <iframe src="https://drive.google.com/file/d/1Ilk8nnKBdNqQeOzTFapTBDX5MhzEgDA4/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1SSPwobQQlGqliJLxWZY89ouB_Gv9aJ0b/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1tV2Du0bU0ODb-DAVGi7_F2bYWTfq6eJz/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1ZLyvkn2vPUQExwQwd5vVtdJIH0WDQbE8/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1pUtL8BjLHglRqlUznFEtPMd-6dnMwlC6/preview" width="400" height="480" allow="autoplay"></iframe>
+                        </div></div>
+                        <!--* 8 *-->
+                        <div class="gamecontent-W">
+                            <iframe src="https://drive.google.com/file/d/1wtXDa9lFOgIP7XlRYTnBU00mivnDeIyY/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                        </div>
+                        <div class="gamecontent-W">
+                            <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV3" style="margin-top: 10px; display:none; align-items: flex-end;">
+                                <iframe src="https://drive.google.com/file/d/1HEoLuSWuJg1MuSz6dgUyq8b7XaWNaWKY/preview" width="640" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1PUayxry-RkVpyucuatt4_IsOcSazMSiS/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1493bHL2UigdkoHeWrXZniPfvWtZfa3jd/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1zdpdWfiss0HO-kXN5j3Sip3dcyuZ7HF1/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1ifm7VyI5tpXeCsEgmgcy5tSxKgZ5R_67/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1VAtVLJjvBZ1rzYvSqw7gDdjLDiKufTP-/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1LKoiizp4W5UywAhrha4KdeKpvDcKO784/preview" width="400" height="480" allow="autoplay"></iframe>
+
+                            </div></div>
+                        <!--* 9 *-->
+                        <div class="gamecontent-W">
+                            <iframe src="https://drive.google.com/file/d/1KagCeQmI838NFYYJgYrRsL8if5D9rIae/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                        </div>
+                        <div class="gamecontent-W">
+                            <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV4" style="margin-top: 10px; display:none; align-items: flex-end;">
+                                <iframe src="https://drive.google.com/file/d/1K67xUgqKDmFj5kEdgK6tGYJriMoOCLLC/preview" width="640" height="480" allow="autoplay"></iframe>                
+                                <iframe src="https://drive.google.com/file/d/1SlEgp9ek2yQfO9mD2GslcRXbPIo3_KqB/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1rTFFZGLif7Nd6H5xozLI3q69qbnPYM_c/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1eliN2lzXfNz__F6nB9Jb-jytS1_9gr7K/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1XgSWa6byALSlecL5_3g7rX_0oKdM5GKK/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1RCRo90fQQS2p1CDSNVeMmi6yUM42ZtBK/preview" width="400" height="480" allow="autoplay"></iframe>
+
+                        </div></div>
+                        <!--* 10 *-->
+                        <div class="gamecontent-W">
+                            <iframe src="https://drive.google.com/file/d/1EsLVcSGnHsLAanKyRibKuMrkq14s19BQ/preview" width="440" height="500" allow="autoplay"></iframe>
+                            <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                        </div>
+                        <div class="gamecontent-W">
+                            <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV5" style="margin-top: 10px; display:none; align-items: flex-end;">
+                                <iframe src="https://drive.google.com/file/d/17mzx1SMBUmWRAuYoSEqbl1399hUL7bjl/preview" width="640" height="480" allow="autoplay"></iframe>                
+                                <iframe src="https://drive.google.com/file/d/11Z-FTC3tSNbzCYf0unDprv72Oj08G7sS/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1TsJC9VV86mCIXadMPlC1s7GfQIk_u2TL/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1b-QNl-WY0Z_0VRoz0Yjd8kpELIUDp1Bx/preview" width="400" height="480" allow="autoplay"></iframe>
+                                <iframe src="https://drive.google.com/file/d/1zhdI6q1kH9X6tX4uZcOy9cQowvSJPBY8/preview" width="400" height="480" allow="autoplay"></iframe>
+
                         </div></div>
 
         <!-- 
