update scroll button

--- a/views/student/course/4_Operators_and_Expressions-course.ejs
+++ b/views/student/course/4_Operators_and_Expressions-course.ejs
@@ -53,7 +53,20 @@
     <div class="content">
         <div id = "content" class="container">
             <div class="accordion" id="accordionParentSyntax">
-                <h1>บทที่ 4 Operators and Expressions</h1>
+            <h2>บทที่ 4 Operators and Expressions</h2>
+            <b>แบบฝึกหัด</b>
+            <a href="/course-Operators_and_Expressions#Knowledge" class="scrollbtnK"  type="button"  >
+                Knowledge
+            </a>
+            <a href="/course-Operators_and_Expressions#Tracing" class="scrollbtnT"  type="button"  >
+                Tracing
+            </a>
+            <a href="/course-Operators_and_Expressions#Explaining" class="scrollbtnE"  type="button"  >
+                Explaining
+            </a>
+            <a href="/course-Operators_and_Expressions#Writing" class="scrollbtnW" type="button"  >
+                Writing
+            </a>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
                     
                     <!--   ## -->
