--- a/views/student/course/5_Selection_Statements-course.ejs
+++ b/views/student/course/5_Selection_Statements-course.ejs
@@ -53,6 +53,20 @@
     <div class="content">
         <div id = "content" class="container">
             <h1>บทที่ 5 Selection Statements</h1>
+            <b>แบบฝึกหัด</b>
+            <a href="/course-Selection_Statements#Knowledge" class="scrollbtnK"  type="button"  >
+                Knowledge
+            </a>
+            <a href="/course-Selection_Statements#Tracing" class="scrollbtnT"  type="button"  >
+                Tracing
+            </a>
+            <a href="/course-Selection_Statements#Explaining" class="scrollbtnE"  type="button"  >
+                Explaining
+            </a>
+            <a href="/course-Selection_Statements#Writing" class="scrollbtnW" type="button"  >
+                Writing
+            </a>
+
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/19FMO5bKNsalcvrO_c0YGNpgffpQ-o7in/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <h2>การควบคุมแบบลำดับ Sequential Control Statements</h2>
@@ -1285,8 +1299,8 @@
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
-                            <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
-                            <div id="myDIV1" style="margin-top: 10px; display:none; align-items: flex-end;">
+                            <button class="btn btn-info" onclick="myFunction6()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV6" style="margin-top: 10px; display:none; align-items: flex-end;">
                                 <iframe src="https://drive.google.com/file/d/1JxhxZ3HDSuAbSOvYcuM9PyJsVQuu3itE/preview" width="640" height="480" allow="autoplay"></iframe> 
                                 <iframe src="https://drive.google.com/file/d/1-NmJEhMiR710Za9xYXItdTX3tIHlLAjy/preview" width="400" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1ZzhqoDhFa5Z1nL6WC_ffIc1gQ8J0gfh5/preview" width="400" height="480" allow="autoplay"></iframe>
@@ -1299,8 +1313,8 @@
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
-                            <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
-                            <div id="myDIV2" style="margin-top: 10px; display:none; align-items: flex-end;">
+                            <button class="btn btn-info" onclick="myFunction7()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV7" style="margin-top: 10px; display:none; align-items: flex-end;">
                                 <iframe src="https://drive.google.com/file/d/1Pf_2en8b8XDDMIcv_dvKQrtQAjZ2qvly/preview" width="640" height="480" allow="autoplay"></iframe> 
                                 <iframe src="https://drive.google.com/file/d/1Ilk8nnKBdNqQeOzTFapTBDX5MhzEgDA4/preview" width="400" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1SSPwobQQlGqliJLxWZY89ouB_Gv9aJ0b/preview" width="400" height="480" allow="autoplay"></iframe>
@@ -1314,8 +1328,8 @@
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
-                            <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
-                            <div id="myDIV3" style="margin-top: 10px; display:none; align-items: flex-end;">
+                            <button class="btn btn-info" onclick="myFunction8()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV8" style="margin-top: 10px; display:none; align-items: flex-end;">
                                 <iframe src="https://drive.google.com/file/d/1HEoLuSWuJg1MuSz6dgUyq8b7XaWNaWKY/preview" width="640" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1PUayxry-RkVpyucuatt4_IsOcSazMSiS/preview" width="400" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1493bHL2UigdkoHeWrXZniPfvWtZfa3jd/preview" width="400" height="480" allow="autoplay"></iframe>
@@ -1331,8 +1345,8 @@
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
-                            <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
-                            <div id="myDIV4" style="margin-top: 10px; display:none; align-items: flex-end;">
+                            <button class="btn btn-info" onclick="myFunction9()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV9" style="margin-top: 10px; display:none; align-items: flex-end;">
                                 <iframe src="https://drive.google.com/file/d/1K67xUgqKDmFj5kEdgK6tGYJriMoOCLLC/preview" width="640" height="480" allow="autoplay"></iframe>                
                                 <iframe src="https://drive.google.com/file/d/1SlEgp9ek2yQfO9mD2GslcRXbPIo3_KqB/preview" width="400" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1rTFFZGLif7Nd6H5xozLI3q69qbnPYM_c/preview" width="400" height="480" allow="autoplay"></iframe>
@@ -1347,8 +1361,8 @@
                             <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                         </div>
                         <div class="gamecontent-W">
-                            <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
-                            <div id="myDIV5" style="margin-top: 10px; display:none; align-items: flex-end;">
+                            <button class="btn btn-info" onclick="myFunction10()">คลิกเพื่อดูเฉลย</button>
+                            <div id="myDIV10" style="margin-top: 10px; display:none; align-items: flex-end;">
                                 <iframe src="https://drive.google.com/file/d/17mzx1SMBUmWRAuYoSEqbl1399hUL7bjl/preview" width="640" height="480" allow="autoplay"></iframe>                
                                 <iframe src="https://drive.google.com/file/d/11Z-FTC3tSNbzCYf0unDprv72Oj08G7sS/preview" width="400" height="480" allow="autoplay"></iframe>
                                 <iframe src="https://drive.google.com/file/d/1TsJC9VV86mCIXadMPlC1s7GfQIk_u2TL/preview" width="400" height="480" allow="autoplay"></iframe>
