--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -56,6 +56,7 @@
         <div id = "content" class="container">
     <!--   C Language -->
             <div class="accordion" id="accordionParentSyntax">
+                <br><br>
                 <h2>บทที่ 3 Input and Output</h2>
                 <b>แบบฝึกหัด</b>
                 <a href="/course-Input_and_Output#Knowledge" class="scrollbtnK" type="button"  >
@@ -1190,7 +1191,7 @@
                     </div></div>
 
         
-        <button onclick="window.location.href='/course-Datatype-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <button onclick="window.location.href='/course-Input_and_Output-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
         <h2><u>แบบทดสอบย่อย</h2></u></button>
         
 
