--- a/views/student/course/4_Operators_and_Expressions-course.ejs
+++ b/views/student/course/4_Operators_and_Expressions-course.ejs
@@ -116,9 +116,7 @@
                     
                 </div>
             </div>
-            </div>
 
-            <div class="game">
             <!--* ข้อ 2 K2 *-->
             <div class="gamecontent">
                 <div  class="question">
@@ -138,10 +136,7 @@
                     
                 </div>
             </div>
-            </div>
-            
 
-            <div class="game">
             <!--* ข้อ 3 K3 *-->
             <div class="gamecontent">
                 <div  class="question">
@@ -186,9 +181,6 @@
                 </div>
             </div>
 
-            </div>
-
-            <div class="game">
                 <!--* ข้อ 5 K5 *-->
                 <div class="gamecontent">
                     <div  class="question">
@@ -209,8 +201,31 @@
                         
                     </div>
                 </div>
+
+                <!--* ข้อ 7 K7 *-->
+                <div class="gamecontent">
+                    <div  class="question">
+                    <h5>ค่าของ expression 3 + 4 * 5 คือเท่าไร</h5>
+                    <br><br>
+                    <p style="text-align: center;" id="demo7"> </p>
+                    </div>
+                    <div class="ans">
+                        <div>
+                        <div class="btn">
+                            <p id="demo" class="button" onclick="myFunctionT7()">23</p>    
+                            <p id="demo" class="button" onclick="myFunctionW7()">35</p>
+                            <p id="demo" class="button" onclick="myFunctionW7()">20</p>  
+                            <p id="demo" class="button" onclick="myFunctionW7()">15</p>                                                                    
+                        </div>
+                        
+                    </div>
+                        
+                    </div>
                 </div>
+                
     
+                </div>
+
                 <div class="game">
                 <!--* ข้อ 6 K6 *-->
                 <div class="gamecontent" style="height: 650px;">
@@ -242,30 +257,6 @@
                         
                     </div>
                 </div>
-    
-                </div>
-
-                <div class="game">
-                    <!--* ข้อ 7 K7 *-->
-                    <div class="gamecontent">
-                        <div  class="question">
-                        <h5>ค่าของ expression 3 + 4 * 5 คือเท่าไร</h5>
-                        <br><br>
-                        <p style="text-align: center;" id="demo7"> </p>
-                        </div>
-                        <div class="ans">
-                            <div>
-                            <div class="btn">
-                                <p id="demo" class="button" onclick="myFunctionT7()">23</p>    
-                                <p id="demo" class="button" onclick="myFunctionW7()">35</p>
-                                <p id="demo" class="button" onclick="myFunctionW7()">20</p>  
-                                <p id="demo" class="button" onclick="myFunctionW7()">15</p>                                                                    
-                            </div>
-                            
-                        </div>
-                            
-                        </div>
-                    </div>
                     </div>
 
                     <div class="game">
@@ -290,9 +281,7 @@
                         </div>
                     </div>
         
-                    </div>
 
-                    <div class="game">
                         <!--* ข้อ 9 K9 *-->
                         <div class="gamecontent">
                             <div  class="question">
@@ -313,10 +302,7 @@
                                 
                             </div>
                         </div>
-            
-                        </div>
 
-                        <div class="game">
                             <!--* ข้อ 10 K10 *-->
                             <div class="gamecontent">
                                 <div  class="question">
@@ -371,9 +357,7 @@
                     
                 </div>
             </div>
-            </div>
 
-            <div class="game">
             <!--* ข้อ 12 T2*-->
             <div class="gamecontent-T" style="height: 500px;">
                 <div  class="question-T">
@@ -401,9 +385,7 @@
                     
                 </div>
             </div>  
-            </div>
 
-            <div class="game">
                 <!--* ข้อ 13 T3*-->
                 <div class="gamecontent-T" style="height: 500px;">
                     <div  class="question-T">
@@ -463,9 +445,7 @@
                             
                         </div>
                     </div>  
-                    </div>
 
-                    <div class="game">
                         <!--* ข้อ 15 T5*-->
                         <div class="gamecontent-T" style="height: 500px;">
                             <div  class="question-T">
@@ -524,14 +504,8 @@
                                 <div>
                                 <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW16()">x = 10, x = 10, x = 10, y = 10</p>                                                                      
-                                </div>
-                                <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW16()">x = 10, x = 9, x = 9, y = 10</p>  
-                                </div>
-                                <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW16()">x = 9, x = 9, x = 10, y = 10</p>  
-                                </div>
-                                <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionT16()">x = 10, x = 9, x = 10, y = 10</p>  
                                 </div>
                             </div>
@@ -570,9 +544,7 @@
                                 
                             </div>
                         </div>  
-                    </div>
 
-                    <div class="game">
                         <!--* ข้อ 18 T8*-->
                         <div class="gamecontent-T" style="height: 500px;">
                             <div  class="question-T">
@@ -631,23 +603,16 @@
                                 <div>
                                 <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW19()">value1 = 0 ,value2 = 0 ,result = 1 </p>                                                                      
-                                </div>
-                                <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionT19()">value1 = 1 ,value2 = 0 ,result = 1 </p>  
                                 </div>
                                 <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW19()">value1 = 1 ,value2 = 1 ,result = 0 </p>  
-                                </div>
-                                <div class="btn">
                                     <p id="demo" class="button" onclick="myFunctionW19()">value1 = 1 ,value2 = 1 ,result = 1 </p>  
                                 </div>
                             </div>
                                 
                             </div>
                         </div>  
-                    </div>
-
-                    <div class="game">
                         <!--* ข้อ 20 T10*-->
                         <div class="gamecontent-T">
                             <div  class="question-T">
@@ -763,8 +728,8 @@
                 <h2>Writing</h2>
                 <!--* 1 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1paJ6fajACtcU8nDFjnIzL7dN-_0Af7Qr/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <iframe src="https://drive.google.com/file/d/1paJ6fajACtcU8nDFjnIzL7dN-_0Af7Qr/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
@@ -774,8 +739,8 @@
                 </div></div>
                 <!--* 2 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1avgE9dzsgDoCFJPB7MTJYP41H-5QeUTS/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <iframe src="https://drive.google.com/file/d/1avgE9dzsgDoCFJPB7MTJYP41H-5QeUTS/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
@@ -785,8 +750,8 @@
                 </div></div>
                 <!--* 3 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1LUur7C0PFlRFAIcyCHdpz622b2fgUS-h/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <iframe src="https://drive.google.com/file/d/1LUur7C0PFlRFAIcyCHdpz622b2fgUS-h/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
@@ -796,8 +761,8 @@
                     </div></div>
                 <!--* 4 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1j-yErRhFEK-ngHTOmk9C0nt3zWAHUCbq/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <iframe src="https://drive.google.com/file/d/1j-yErRhFEK-ngHTOmk9C0nt3zWAHUCbq/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
@@ -807,8 +772,8 @@
                 </div></div>
                 <!--* 5 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1N00PU_A3v7hC6fAAAiuWU6KLU4kEaTe5/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <iframe src="https://drive.google.com/file/d/1N00PU_A3v7hC6fAAAiuWU6KLU4kEaTe5/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
@@ -816,10 +781,68 @@
                         <iframe src="https://drive.google.com/file/d/1365nt8s8nUG-aEt8GEUS0iE-M3yUyY93/preview" width="640" height="480" allow="autoplay"></iframe>                
                         <iframe src="https://drive.google.com/file/d/130A5M1fhuuAxDZOFcuYToVdCECKxvunh/preview" width="400" height="480" allow="autoplay"></iframe>
                 </div></div>
+                <!--* 6 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1TWdafw8mKq4XGVC260VupmQaUIZGIwL8/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction6()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV6" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1sfkPu396paqd9C7LERiK09-UKgrKkJOU/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1xbnDoQUMalRP547KS0RmUrnA85dPK7wD/preview" width="400" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1k1HT5Q8izrsYF7fmzBuQWv4eQvXKUOyV/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
+                <!--* 7 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/18TJQs-oPlYLLTheWSfxoj2eIjICKWbCt/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction7()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV7" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1lItZKQ5KDbYOKRIqFFrqqZSu2v8y93Dd/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1o4aFSVhzFmFFkNxLUkvpz6q4WynLgijd/preview" width="400" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/114b8pKfZpYKCCFhSOE6icXk8G2mY8P4Y/preview" width="400" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1rP47mQD8nHGXfVFQdh_IknR5rAnnwFbD/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
+                <!--* 8 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1a028--DAmG27iho4J3gg3CokJ7QlL6dK/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction8()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV8" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/11LE_6jH2LR43Lx8ggWgIcdvL2lodbBGR/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1vzR6Odtyfie-s38V8rX2oW98dzoncybW/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
+                <!--* 9 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1wpBlvrL7-D0NG3cLfS4FZc-k04yEwhpJ/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction9()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV9" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1nrQfWCFJF_Yt2yvSTRZK90kjW59fLjs_/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/14SqmsA2KPmhFK_36R5M1U7aUAlziXjcZ/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
+                <!--* 10 *-->
+                <div class="gamecontent-W">
+                    <iframe src="https://drive.google.com/file/d/1LBMrVIPBVEdT52EcaEdBToVyWqIkJmXh/preview" width="540" height="500" allow="autoplay"></iframe>
+                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction10()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV10" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1sVbOZxN2oItHs90hQ_-So3mso7l8IaS7/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1kNV019VuiROKaW_3F7lvnT1WgdbNYMbx/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div></div>
 
-        <!-- 
-        <button onclick="window.location.href='/course-Datatype-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
-        <h2><u>แบบทดสอบย่อย</h2></u></button>-->
+        
+        <button onclick="window.location.href='/course-Operators_and_Expressions-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
+        <h2><u>แบบทดสอบย่อย</h2></u></button>
         
 
         
