--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -860,7 +860,7 @@
                 <!--* ข้อ 25 E5 *-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                    <h5>ข้อใดอธิบายโค้ดนี้ได้ถูกต้อง</h5>
+                    <h5>อธิบายปัญหาของโค้ดนี้คืออะไร</h5>
                     <p>#include < stdio.h > 
                     <br>int main() {
                     <br>&ensp;int number;
@@ -894,7 +894,7 @@
                 <!--* ข้อ 27 E7 *-->
                 <div class="gamecontent-E">
                     <div  class="question-E">
-                    <h5>ข้อใดอธิบายโค้ดนี้ได้ถูกต้อง</h5>
+                    <h5>อธิบายปัญหาของโค้ดนี้คืออะไร</h5>
                     <p>#include < stdio.h > 
                     <br>int main() {
                     <br>&ensp;int num = 123;
@@ -1081,6 +1081,7 @@
             <BR id="Writing"> <br><br>
                 <h2>Writing</h2>
                 <!--* 1 *-->
+                <h5>ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1HdpXWDBMAyG0spJwPtGLvrvkL1NNJAXf/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1091,6 +1092,7 @@
                         <iframe src="https://drive.google.com/file/d/1m5sm4m8Rn4A5HMtLJtRxciQj2jiYW5nQ/preview" width="640" height="480" allow="autoplay"></iframe>
                         <iframe src="https://drive.google.com/file/d/1SGw5IUsHrH6j-67MwaL1L9-w10bY9WqQ/preview" width="400" height="480" allow="autoplay"></iframe>                </div></div>
                 <!--* 2 *-->
+                <h5>ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1N3zOHlnLhtzIgVdhq3zyQ2b5yy2ufdM_/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1102,6 +1104,7 @@
                         <iframe src="https://drive.google.com/file/d/1XRE1VdQRJHaSzU2mCujwtvXcSKiK7Lj3/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 3 *-->
+                <h5>ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1rclt2KWfTh_wlSVz5aCkdQIEVveSjzER/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1113,6 +1116,7 @@
                         <iframe src="https://drive.google.com/file/d/1cgL95bZbNM8dlralGqudNXNRxe85UbOx/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 4 *-->
+                <h5>ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI)</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1OXdpUDA4A5wK7Y6NJpGx5Amx8v-ieEeX/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1124,6 +1128,7 @@
                         <iframe src="https://drive.google.com/file/d/11ExhzaoA3G0enbk7vrwylD6B0jFOdJZW/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 5 *-->
+                <h5>ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1NydlFWaNi6JqLbukI-2_BOpGKTuJRbVQ/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1135,6 +1140,7 @@
                         <iframe src="https://drive.google.com/file/d/1KVwUzh0kRYZuFtWklyNjXUjP7BaO745g/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 6 *-->
+                <h5>ให้เขียนโปรแกรมแนะนำตัวเอง</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/14hJ_KnUSpBlys--trP_EkFelvtfdKiPw/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1146,6 +1152,7 @@
                         <iframe src="https://drive.google.com/file/d/1M64gNp3JiXpfk0wmXDrgeuipIbXGUtDj/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 7 *-->
+                <h5>ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ และส่วนสูง</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1yWAHdlJa3NUEXct3LNRFjEz8XUFZIDXN/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1157,6 +1164,7 @@
                         <iframe src="https://drive.google.com/file/d/1skQb-Xp--uCfWWiLguJ2mixzOfLRXKiD/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 8 *-->
+                <h5>ให้เขียนโปรแกรมแสดงข้อมูลชื่อ นามสกุล อายุ ส่วนสูง และงานอดิเรก</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1oqMa68Cv4zJYohxVTi8_DVqaNCxBggxN/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1168,6 +1176,7 @@
                         <iframe src="https://drive.google.com/file/d/1JJUM1Ad1k-JHvw2aXo3DRBlE72-NSCAt/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 9 *-->
+                <h5>ให้เขียนโปรแกรมแสดงข้อมูลช่องทางติดต่อ</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/1CGfw9qkwd_HKILpMeJyDzXIKpCQZfpXC/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
@@ -1179,6 +1188,7 @@
                         <iframe src="https://drive.google.com/file/d/1hex8ta2XdT4guxJVSAd9-JBAXACTUY_W/preview" width="400" height="480" allow="autoplay"></iframe>
                     </div></div>
                 <!--* 10 *-->
+                <h5>ให้เขียนโปรแกรมแสดงข้อมูลการศึกษาสูงสุด</h5>
                 <div class="gamecontent-W">
                     <iframe src="https://drive.google.com/file/d/17ws3NNddvNo9Z_ayKAPLbMzWi6Lp44uQ/preview" width="540" height="500" allow="autoplay"></iframe>
                     <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="50%" height="500px"></iframe>  
